map view bug fixes map view - region did change data update process map view - refresh view with new data according to boundries

--- a/iOS_MyTaxi_Challenge/en.lproj/Localizable.strings
+++ b/iOS_MyTaxi_Challenge/en.lproj/Localizable.strings
@@ -36,3 +36,6 @@
 "country" = "Country";
 "city" = "City";
 "pleaseChoose" = "Please Select";
+"mainWelcome" = "Welcome to iOS Challenge";
+"detailWelcome" = "Choose Country, Select City, Wander on the Map. Whatever you desire :)";
+
