list view is getting modularized

--- a/iOS_MyTaxi_Challenge/en.lproj/Localizable.strings
+++ b/iOS_MyTaxi_Challenge/en.lproj/Localizable.strings
@@ -38,4 +38,5 @@
 "pleaseChoose" = "Please Select";
 "mainWelcome" = "Welcome to iOS Challenge";
 "detailWelcome" = "Choose Country, Select City, Wander on the Map. Whatever you desire :)";
+"listView" = "List View";
 
